Fix: section spacing

--- a/styles.css
+++ b/styles.css
@@ -148,8 +148,11 @@ a:hover{
 
 section {
     padding-top: 4vh;
+    padding-bottom: 4vh;
+    /*
     height: 96vh;
-    margin: 0 10rem;
+    */
+    margin: 7vh 10rem;
     box-sizing: border-box;
     min-height: fit-content;
 }
@@ -164,7 +167,10 @@ section {
     display: flex;
     justify-content: center;
     gap: 5rem;
-    height: 80vh;
+    /*
+    height: 68vh;
+    */
+    margin-bottom: 0vh;
 }
 
 .section__pic-container {
